--- a/roles/galaxy-docker/tasks/provision/transfer_genomes.yml
+++ b/roles/galaxy-docker/tasks/provision/transfer_genomes.yml
@@ -16,16 +16,21 @@
     path: "{{docker_export_location}}/genomes"
     state: directory
 
-- name: Move genomes to the server using rsync
-  synchronize:
-    compress: yes #Necessary for big fasta files
-    copy_links: "{{galaxy_docker_genome_copy_links}}" # You don't have to duplicate the file in the playbook directory but can symlink instead
-    delete: no # do not delete genomes already there
-    dest: "{{docker_export_location}}/genomes"
-    src: "{{genomes_dir}}"
-    archive: no #owner and chmod information should not be copied
-    recursive: yes
-    checksum: yes #when archive is no. Checksum should be yes, otherwise the files are always copied.
-#    ssh_args: "{{ansible_ssh_extra_args}}"
-#  vars:
-#    ansible_ssh_pipelining: False
+- debug:
+    msg: "{{item}}"
+  with_items:
+    - Transferring genomes has een disbled because of issue 28551 in ansible
+    - See https://github.com/ansible/ansible/issues/28551
+    - Transferring genomes does work in release_0.1 branch, but requires running as a priviledged user.
+
+#TODO: Enable when issue is fixed.
+#- name: Move genomes to the server using rsync
+#  synchronize:
+#    compress: yes #Necessary for big fasta files
+#    copy_links: "{{galaxy_docker_genome_copy_links}}" # You don't have to duplicate the file in the playbook directory but can symlink instead
+#    delete: no # do not delete genomes already there
+#    dest: "{{docker_export_location}}/genomes"
+#    src: "{{genomes_dir}}"
+#    archive: no #owner and chmod information should not be copied
+#    recursive: yes
+#    checksum: yes #when archive is no. Checksum should be yes, otherwise the files are always copied.
