--- a/roles/galaxy-docker/tasks/provision/transfer_genomes.yml
+++ b/roles/galaxy-docker/tasks/provision/transfer_genomes.yml
@@ -13,7 +13,7 @@
 
 - name: Create genomes directory in export folder
   file:
-    path: "{{docker_export_location}}/genomes"
+    path: "{{galaxy_docker_export_location}}/genomes"
     state: directory
 
 - name: Move genomes to the server using rsync
@@ -21,7 +21,7 @@
     compress: yes #Necessary for big fasta files
     copy_links: "{{galaxy_docker_genome_copy_links}}" # You don't have to duplicate the file in the playbook directory but can symlink instead
     delete: no # do not delete genomes already there
-    dest: "{{docker_export_location}}/genomes"
+    dest: "{{galaxy_docker_export_location}}/genomes"
     src: "{{genomes_dir}}"
     archive: no #owner and chmod information should not be copied
     recursive: yes
