--- a/roles/galaxy-docker/tasks/provision/transfer_genomes.yml
+++ b/roles/galaxy-docker/tasks/provision/transfer_genomes.yml
@@ -22,7 +22,7 @@
     copy_links: "{{galaxy_docker_genome_copy_links}}" # You don't have to duplicate the file in the playbook directory but can symlink instead
     delete: no # do not delete genomes already there
     dest: "{{galaxy_docker_export_location}}/genomes"
-    src: "{{genomes_dir}}"
+    src: "{{galaxy_docker_genomes_dir}}"
     archive: no #owner and chmod information should not be copied
     recursive: yes
     checksum: yes #when archive is no. Checksum should be yes, otherwise the files are always copied.
