--- a/roles/galaxy-docker/tasks/provision/transfer_genomes.yml
+++ b/roles/galaxy-docker/tasks/provision/transfer_genomes.yml
@@ -24,10 +24,12 @@
 - name: Move genomes to the server using rsync
   synchronize:
     compress: yes  #Necessary for big fasta files
-    copy_links: "{{galaxy_docker_genome_copy_links}}"  # You don't have to duplicate the file in the playbook directory but can symlink instead
+    # You don't have to duplicate the file in the playbook directory but can symlink instead
+    copy_links: "{{galaxy_docker_genome_copy_links}}"
     delete: no  # do not delete genomes already there
     dest: "{{galaxy_docker_export_location}}/genomes"
     src: "{{galaxy_docker_genomes_dir}}"
     archive: no  #owner and chmod information should not be copied
     recursive: yes
-    checksum: yes  #when archive is no. Checksum should be yes, otherwise the files are always copied.
+    #when archive is no. Checksum should be yes, otherwise the files are always copied.
+    checksum: yes
